<resources>
    <string name="app_name">P-Task</string>
    <string name="schedule_activity">Schedule Task</string>
    <string name="task">Task:</string>
    <string name="action_settings">Settings</string>
    <string name="priority">Priority</string>
    <string name="date">Date:</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="description">Info:</string>
    <string name="addButton">Add Task</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="no_task">No Tasks Currently</string>
    <string name="p">P</string>
    <string name="time">TIME</string>
    <string name="taskInfo">TASK</string>
</resources>
