<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.mahdi.p_task.addTask">

        <TextView
            android:id="@+id/task_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/date"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskSeperator" />

        <TextView
            android:id="@+id/priority"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/priority"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoSeperator"
            tools:text="@string/priority" />

        <RadioGroup
            android:id="@+id/prioritySelection"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:checkedButton="@+id/green"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/addTask"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priority"
            app:layout_constraintVertical_bias="0.100000024">

            <RadioButton
                android:id="@+id/green"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.11"
                android:buttonTint="@color/greenButton"
                android:text="1"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/blue"
                app:layout_constraintLeft_toRightOf="@+id/blue" />

            <RadioButton
                android:id="@+id/blue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1.04"
                android:buttonTint="@color/blueButton"
                android:text="2"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/yellow"
                app:layout_constraintLeft_toRightOf="@+id/yellow" />

            <RadioButton
                android:id="@+id/yellow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1.07"
                android:buttonTint="@color/yellowButton"
                android:text="3"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:layout_editor_absoluteY="102dp" />

            <RadioButton
                android:id="@+id/orange"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="16dp"
                android:buttonTint="@color/orangeButton"
                android:text="4"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/green"
                app:layout_constraintLeft_toRightOf="@+id/green" />

            <RadioButton
                android:id="@+id/red"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:buttonTint="@android:color/holo_red_light"
                android:text="5"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/orange"
                app:layout_constraintHorizontal_bias="0.729"
                app:layout_constraintLeft_toRightOf="@+id/orange"
                app:layout_constraintRight_toRightOf="parent" />
        </RadioGroup>

        <TextView
            android:id="@+id/dateField"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="TextView"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/task_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/task_date" />

        <TextView
            android:id="@+id/task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/task"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/taskField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text=""
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/task"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/task" />

        <TextView
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/start_time"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateSeperator" />

        <TextView
            android:id="@+id/startTimeField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="TextView"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/startTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/startTime" />

        <TextView
            android:id="@+id/endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/end_time"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startTime" />

        <TextView
            android:id="@+id/endTimeField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="TextView"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/endTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/endTime" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/description"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeSeperator" />

        <EditText
            android:id="@+id/descriptionField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/description" />


        <View
            android:id="@+id/taskSeperator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskField" />

        <View
            android:id="@+id/dateSeperator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_date" />

        <View
            android:id="@+id/timeSeperator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endTime" />

        <View
            android:id="@+id/infoSeperator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionField" />

        <Button
            android:id="@+id/addTask"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="sans-serif"
            android:text="@string/addButton"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="27sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>